--- a/src/styles/All.css
+++ b/src/styles/All.css
@@ -1,20 +1,51 @@
-.user-container {
-    width: 90%;
-    margin: 30px auto;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 40px;
+.users-container {
+  width: 90%;
+  margin: 30px auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
 }
-.user {
-    box-sizing: border-box;
-    padding: 15px;
-    background-color: rgba(150, 155, 162, 0.765);
-    max-width: 300px;
-    border: 1px solid black;
-    border-radius: 5px;
-    box-shadow: 3px 3px 10px black;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+
+.users {
+  box-sizing: border-box;
+  padding: 15px;
+  background-color: #de5935;
+  max-width: 300px;
+  border: 1px solid #f7cd46;
+  border-radius: 5px;
+  box-shadow: 3px 3px 10px #f7cd46;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.users img {
+  border-radius: 50%;
+  width: 250px;
+}
+
+.header {
+  box-sizing: border-box;
+  height: 6vw;
+  border-bottom: 1.6px solid #f7cd46;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header input {
+  text-align: center;
+  width: 30%;
+  height: 20px;
+  border: none;
+  border-radius: 4px;
+}
+.header input[type="text"]:focus {
+  transition: all 0.4s ease-in-out;
+  width: 50%;
+  height: 25px;
+  outline: none;
+}
+.header input[type="text"]:active {
+  outline: #f7cd46;
 }
